# fms-dgt

./: .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  dpk-requirements.txt  pyproject.toml  tox.ini
.github/: pull_request_template.md
configs/: all_api_tasks.yaml  all_api_tasks_parallel.yaml  demo.yaml  parallel_config.yaml
data/api_transformation/atis/: .gitignore  README.md  qna.yaml
data/api_transformation/dstc8/: README.md  qna.yaml
data/api_transformation/multiwoz/: .gitignore  README.md  qna.yaml
data/api_transformation/snips/: .gitignore  README.md  qna.yaml
data/api_transformation/toolqa/: .gitignore  qna.yaml
data/api_transformation/topv2/: qna.yaml
data/code/apis/glaive/: README.md
data/generation/logical_reasoning/causal/: README.md  qna.yaml  qnastar.yaml
data/generation/pipeline/: qna.yaml
data/generation/temporal_reasoning/: additional_seed_examples.yaml  qna.yaml
data/logical_reasoning/causal/: qnadup.yaml
data/pipeline/: prompt.txt  qna.yaml
data/temporal_reasoning/: qna.yaml  seed_examples.yaml
data/transformation/apis/atis/: qna.yaml
data/transformation/apis/dstc8/: .gitignore  qna.yaml
data/transformation/apis/multiwoz/: qna.yaml
data/transformation/apis/snips/: .gitignore  qna.yaml
data/transformation/apis/toolqa/: README.md  qna.yaml
data/transformation/apis/topv2/: .gitignore  README.md  qna.yaml
data/transformation/cot/: qna.yaml
data/transformation/star/: qna.yaml
data/transformation/star_cot/: qna.yaml
docs/: sdg_design.md
fms_dgt/: __init__.py  __main__.py  constants.py  generate_data.py  index.py  lh_data.py  utils.py
fms_dgt/base/: block.py  databuilder.py  dataloader.py  datastore.py  experiment_card.py  instance.py  multiprocessing.py  pipeline.py  prompt.py  registry.py  resource.py  task.py  task_card.py  trainer.py  validator.py
fms_dgt/blocks/: __init__.py
fms_dgt/blocks/compositions/: chain.py  sequence.py
fms_dgt/blocks/generators/: README.md  genai.py  llm.py  openai.py  utils.py  vllm.py  vllm_in_proc.py  watsonx.py
fms_dgt/blocks/generators/vllm/: __init__.py  server.py  vllm_in_proc.py  vllm_serve.py
fms_dgt/blocks/generators/vllm_server/: __init__.py
fms_dgt/blocks/postprocessors/: __init__.py  code_quality.py  document_quality.py  fuzzy_dedup.py
fms_dgt/blocks/postprocessors/datatrove/: __init__.py  minhash_dedup.py
fms_dgt/blocks/postprocessors/dpk/: code_quality.py  document_quality.py  fuzzy_dedup.py
fms_dgt/blocks/trainers/: __init__.py  deepspeed.py  trainer.py
fms_dgt/blocks/utilities/: __init__.py  field_map.py  flatten_field.py  prompt_builder.py
fms_dgt/blocks/validators/: __init__.py  always_true.py  api.py  dupchecker.py  fuzzy_dedup.py  lm_judge.py  rouge.py
fms_dgt/databuilders/: __init__.py
fms_dgt/databuilders/api/: api_function_checking.yaml  api_yes_no_detection.yaml  generate.py  task.py  utils.py
fms_dgt/databuilders/api_transformation/: .gitignore  README.md  generate.py  task.py  transform_api_snips_atis.yaml
fms_dgt/databuilders/nl2sql/: README.md  generate.py  nl2sql.yaml  task.py
fms_dgt/databuilders/simple/: generate.py  simple.yaml  task.py  utils.py
fms_dgt/dataloaders/: __init__.py  default.py  file.py
fms_dgt/datastores/: default.py  multi.py
fms_dgt/generators/: genai.py  llm.py  openai.py  vllm.py
fms_dgt/pipelines/: simple.yaml
fms_dgt/pipelines/generation/: simple.yaml
fms_dgt/pipelines/transformation/: simple.yaml
fms_dgt/resources/: api.py  genai.py  gpu.py  openai.py  utils.py  watsonx.py
fms_dgt/trainers/: deepspeed.py
fms_dgt/validators/: api.py  genai.py  lm_judge.py  rouge.py
fms_dgt/validators/nl2sql/: sql_execution_validator.py  sql_syntax_validator.py
fms_sdg/: __main__.py  generate_data.py  utils.py
fms_sdg/base/: block.py  databuilder.py  dataloader.py  generator.py  instance.py  registry.py  task.py  validator.py
fms_sdg/blocks/generators/: genai.py  llm.py  openai.py  vllm.py
fms_sdg/blocks/validators/: api.py  lm_judge.py  rouge.py
fms_sdg/databuilders/: __init__.py
fms_sdg/databuilders/api/: api_function_checking.yaml  api_yes_no_detection.yaml  generate.py  task.py
fms_sdg/databuilders/nl2sql/: generate.py  nl2sql.yaml  task.py
fms_sdg/databuilders/simple/: README.md  generate.py  simple.yaml  task.py  utils.py
fms_sdg/dataloaders/: default.py
fms_sdg/generators/: __init__.py  genai.py  llm.py  openai.py  utils.py  vllm.py
fms_sdg/resources/: api.py  genai.py  genai_key.py  gpu.py  openai.py  openai_key.py
fms_sdg/validators/: api.py  genai.py  lm_judge.py  rouge.py
fms_sdg/validators/nl2sql/: sql_execution_validator.py  sql_syntax_validator.py
scripts/: lint.sh
templates/databuilder/: README.md  data_builder_name.yaml  data_builder_name_genai.yaml  data_builder_name_openai.yaml  data_builder_name_vllm.yaml  data_builder_name_vllm_remote.yaml  generate.py  task.py
templates/generator/: template.py
templates/validator/: template.py
tests/: __init__.py  test_utils.py
tests/base/: test_load_task_file.py
tests/blocks/compositions/: blockchain.py  blocksequence.py  test_sequence.py
tests/blocks/generators/: test_llm.py  tmp_cache.db
tests/blocks/postprocessors/: test_code_quality.py  test_document_quality.py  test_fuzzy_dedup.py
tests/blocks/utilities/: test_field_map.py
tests/blocks/validators/: crash_api.py  rouge_addbug.py  test_api.py  test_dupchecker.py  test_lm_judge.py  test_lm_judge_dupinput.py  test_nl2sql.py  test_rouge.py  test_save_filtered.py  two_minor_bugs.py
tests/compatibility_tests/: .gitignore  README.md  blocks.py
tests/databuilders/: test_databuilder_execution.py  test_nl2sql.py
tests/dataloaders/: default.py  test_default.py  test_file.py
tests/dataloaders/test_data/: test_seeds.yaml
tests/datastores/: test_multi_target.py
tests/generators/: test_genai.py  test_llm.py
tests/mock_classes/: __init__.py  mock_llm.py
tests/validators/: test_api.py  test_lm_judge.py  test_nl2sql.py  test_rouge.py
(+108 files in other folders)
